deploy-test/04.ingress/test.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-game
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: game.ajway.co.kr
    http:
      paths:
      - backend:
          serviceName: svc-tetris
          servicePort: 80
